--- a/index.html
+++ b/index.html
@@ -548,11 +548,12 @@
         Made by: Cal & Mal
 
           <div class="miniNav">
-            <a  class="active fa-solid fa-house" href="index.html">Home</a> 
+            <a  class="active fa-solid fa-house" href="#logo">Home</a> 
             <a  class="fa-solid fa-house" href="#aboutUs">About Us</a>   
             <a href="">Gmail</a>
             <a  class=" fa-solid fa-house" href="index.html">Insta</a>        
           </div>
+          © 2024, Malicious Caligraphy Powered by Shopify
 
         </ul>
         </footer>
