--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <div class="product-image">
           <img src="images/tshirtMockups/slashTshirtMockUp.png" alt="Slash T shirt">
         </div>
-          <h5>Slash T-Shirt</h5>
+          <h5>Antonio's Slash T-Shirt</h5>
           <h6>£14.05</h6>
           <div class = "buyButton" id='product-component-1706050893123'></div>
           <script type="text/javascript">
