--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;800&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
     <!-- favicon -->
     <link rel="icon" type="image/x-icon" href="images/favicon/favicon.ico">
 </head>
@@ -539,9 +539,13 @@
 <div class="shelfContainer">
   <div class="top">
     <h1 id = "aboutUs">About Us</h1>
-  </div>
-  <section>
 
+  </div>
+  <section class="content">
+      <p>
+      Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi vel enim libero molestias modi minima neque, quas obcaecati ipsam cumque corrupti aut quia repudiandae numquam at, inventore provident sapiente soluta?
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis minima veniam sit quia odit ex in praesentium ullam culpa, illum doloremque, quasi rem! Numquam sed animi perspiciatis totam molestias optio?
+    </p>
   </section>
 </div>
       <footer>
