--- a/index.html
+++ b/index.html
@@ -24,6 +24,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap" rel="stylesheet">
     <!-- favicon -->
     <link rel="icon" type="image/x-icon" href="images/favicon/favicon.ico">
+
+    <!-- Meta tags -->
+    <meta name="description" content="Malicious Caligraphy is a company that makes shirts and cannot write descriptions online , big booty bitches">
+    <meta name="keywords" content="malicious caligraphy , fashion , Northern Irish Fashion , 
+    Trendy t-shirts, Designer apparel, Northern Ireland fashion, Unique graphic tees, Fashion-forward clothing, Local designer wear, Cool streetwear, Belfast style, Irish fashion, Contemporary prints, Urban chic tees, Northern Ireland trends, Fashionable street style, Limited edition t-shirts, Modern Irish fashion, Stylish casual wear, Belfast designer tees, Graphic print fashion, Youthful clothing, Fashion inspired by Northern Ireland">
+    <meta name="author" content="Mal & Cal">
 </head>
 <body>
     <div class="hero-image">
