--- a/allProducts.html
+++ b/allProducts.html
@@ -504,12 +504,13 @@
                   })();
                   /*]]>*/
                   </script></div>  
+                  
                   <!-- Orange polygon eyes -->
                   <div class="product-card">
                     <div class="product-image">
                     <img src="images/tshirtMockups/Eyes Collection/orangePolygonEyes.png" alt="Orange Polygon eyes T shirt">
                   
-                    <h5>Polygon Eyes T-Shirt</h5>
+                    <h5>Polygkkkon Eyes T-Shirt</h5>
                     <h6>£11.00</h6>
                   </div>     
                   <div class = "buyButton" id='product-component-1707168578175'></div>
