--- a/collections.html
+++ b/collections.html
@@ -67,7 +67,7 @@
                   <a  class="active fa-solid fa-house" href="#logo">Home</a> 
                   <a  class="fa-solid fa-house" href="#aboutUs">About Us</a>   
                   <a href="">Gmail</a>
-                  <a  class=" fa-solid fa-house" href="index.html">Insta</a>        
+                  <a  class=" fa-solid fa-house" href="https://www.instagram.com/maliciouscaligraphy/">Insta</a>        
                 </div>
                 © 2024, Malicious Caligraphy Powered by Shopify , and spite , and ur mum
       
