Updates to collections

--- a/allProducts.html
+++ b/allProducts.html
@@ -40,13 +40,15 @@
     <div class="hero-image">
         <div class="hero-text">
           <h1>Malicious Caligraphy's Products</h1>
-        </div>      </div>      
-        <nav id="topNav"> 
-          <a href="index.html" >Home</a>
-          <a href="aboutUs.html">About Us</a>
-          <a href="collections.html">Collections</a>
-          <a href="allProducts.html" class = "active">All Products</a>   
-  </nav>  
+        </div>      
+      </div>      
+      <nav class="topnav">
+        <a href="index.html">Home</a>
+        <a href="collections.html">All Collections</a>
+        <a href="aboutUs.html">About</a>
+        <a href="allProducts.html">All Products</a>
+      </nav>
+
 
     <section class="shelfContainer">
         <div class="top">
