--- a/collections.html
+++ b/collections.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="heroImage.css">
     <link rel="stylesheet" href="productCards.css">
     <link rel="stylesheet" href="overlay.css">
+    <link rel="stylesheet" href="dropDown.css">
 
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -42,12 +43,12 @@
           <h1>Malicious Caligraphy's Collections</h1>
         </div>  
       </div>    
-        <nav id="topNav"> 
-          <a href="index.html" >Home</a>
-          <a href="aboutUs.html">About Us</a>
-          <a href="collections.html" class = "active">Collections</a>
-          <a href="allProducts.html">All Products</a>   
-  </nav>   
+      <nav class="topnav">
+        <a href="index.html">Home</a>
+        <a href="collections.html">All Collections</a>
+        <a href="aboutUs.html">About</a>
+        <a href="allProducts.html">All Products</a>
+      </nav>
     </div>  
     <section class="shelfContainer">
         <div class="top">
@@ -55,10 +56,10 @@
       
         <section class="content">
             <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi vel enim libero molestias modi minima neque, quas obcaecati ipsam cumque corrupti aut quia repudiandae numquam at, inventore provident sapiente soluta?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis minima veniam sit quia odit ex in praesentium ullam culpa, illum doloremque, quasi rem! Numquam sed animi perspiciatis totam molestias optio?
+            
           </p>
-        </section></section>
+        </section>
+      </section>
       </div>
             <footer>
               Made by: Cal & Mal
