--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="heroImage.css">
     <link rel="stylesheet" href="productCards.css">
     <link rel="stylesheet" href="overlay.css">
+    <link rel="stylesheet" href="dropDown.css">
 
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -43,12 +44,12 @@
         </div>      
 
     </div>          
-    <nav id="topNav"> 
-            <a href="index.html" class = "active">Home</a>
-            <a href="aboutUs.html">About Us</a>
-            <a href="collections.html">Collections</a>
-            <a href="allProducts.html">All Products</a>   
-    </nav>  
+    <nav class="topnav">
+      <a href="index.html">Home</a>
+      <a href="collections.html">All Collections</a>
+      <a href="aboutUs.html">About</a>
+      <a href="allProducts.html">All Products</a>
+    </nav>
   </div>
 <div class="shelfContainer">
     <nav class="product-filter">
