--- a/aboutUs.html
+++ b/aboutUs.html
@@ -40,13 +40,14 @@
     <div class="hero-image">
         <div class="hero-text">
           <h1>About: Malicious Caligraphy</h1>
-        </div>          </div>  
-        <nav id="topNav"> 
-          <a href="index.html" >Home</a>
-          <a href="aboutUs.html"class = "active">About Us</a>
-          <a href="collections.html">Collections</a>
-          <a href="allProducts.html">All Products</a>   
-  </nav>  
+        </div>          
+      </div>  
+      <nav class="topnav">
+        <a href="index.html">Home</a>
+        <a href="collections.html">All Collections</a>
+        <a href="aboutUs.html">About</a>
+        <a href="allProducts.html">All Products</a>
+      </nav>
 
     <section class="shelfContainer">
         <div class="top">
