--- a/aboutUs.html
+++ b/aboutUs.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="heroImage.css">
     <link rel="stylesheet" href="productCards.css">
     <link rel="stylesheet" href="overlay.css">
+    <link rel="stylesheet" href="dropDown.css">
 
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -48,11 +49,10 @@
         <a href="aboutUs.html">About</a>
         <a href="allProducts.html">All Products</a>
       </nav>
-
+      </div>
     <section class="shelfContainer">
         <div class="top">
-          <h1 id = "aboutUs">About Us</h1>
-      
+          <h1 id = "aboutUs">About Us</h1>    
         </div>
         <section class="content">
             <p>
