--- a/allProducts.html
+++ b/allProducts.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="heroImage.css">
     <link rel="stylesheet" href="productCards.css">
     <link rel="stylesheet" href="overlay.css">
+    <link rel="stylesheet" href="dropDown.css">
 
     <!-- fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
