About us editing

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -56,10 +56,33 @@
         </div>
         <section class="content">
             <p>
-            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Animi vel enim libero molestias modi minima neque, quas obcaecati ipsam cumque corrupti aut quia repudiandae numquam at, inventore provident sapiente soluta?
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis minima veniam sit quia odit ex in praesentium ullam culpa, illum doloremque, quasi rem! Numquam sed animi perspiciatis totam molestias optio?
+            We are Malicious Caligraphy a small fashion brand based in Northern Ireland , made by 2 friends because of a bet.
+            
           </p>
         </section></section>
+        <section class="shelfContainer">
+          <div class="top">
+            <h1 id = "aboutUs">FAQs</h1>    
+          </div>
+          <section class="content">
+              <p>
+              <span class="bold">Why the name malicious caligraphy?</span>
+              Malicious for our creator , Mal and Caligraphy for my name , Cal
+              <span class="bold">Why create a fashion brand</span>
+              On the 15th of January I made a bet with my best friend to create a business and make £100. I've made comics , art , websites , video games and alot more useless shit in the past and I have no experience in fashion ,  I don't even dress myself fucking well , making a fashion brand in all senses was a bad idea. But I have a philosphy in life : "throw shit againist the wall and see what sticks
+              <span class="bold">Can you please stop punching my 4 year old , he's critically ill?</span>
+              No
+              <span class="bold">Please I'm begging you stop</span>
+              <span class="bold">He's not breathing , oh my god fucking stop</span>
+              <span class="bold">I'm calling the police </span>
+              None of those are even Questions
+              <span class="bold">Sir my name is Constable Tom , we're going to be taking you into the station</span>
+              Nuh uh 
+              <span class="bold">Did you just say fucking nuh uh?</span>
+              Suck my balls 
+              <span class="bold">Sir I'm taking you to court <br>Cal Martin Nicholas Dempster i sentence you to 12 years </span>
+            </p>
+          </section></section>
       </div>
             <footer>
               Made by: Cal & Mal
