--- a/aboutUs.html
+++ b/aboutUs.html
@@ -66,21 +66,23 @@
           </div>
           <section class="content">
               <p>
-              <span class="bold">Why the name malicious caligraphy?</span>
+              <span class="bold">Why the name malicious caligraphy?</span><br>
               Malicious for our creator , Mal and Caligraphy for my name , Cal
-              <span class="bold">Why create a fashion brand</span>
+              <span class="bold">Why create a fashion brand</span><br>
               On the 15th of January I made a bet with my best friend to create a business and make £100. I've made comics , art , websites , video games and alot more useless shit in the past and I have no experience in fashion ,  I don't even dress myself fucking well , making a fashion brand in all senses was a bad idea. But I have a philosphy in life : "throw shit againist the wall and see what sticks
-              <span class="bold">Can you please stop punching my 4 year old , he's critically ill?</span>
+              <span class="bold">Can you please stop punching my 4 year old , he's critically ill?</span><br>
               No
-              <span class="bold">Please I'm begging you stop</span>
-              <span class="bold">He's not breathing , oh my god fucking stop</span>
-              <span class="bold">I'm calling the police </span>
+              <span class="bold">Please I'm begging you stop</span><br>
+              <span class="bold">He's not breathing , oh my god fucking stop</span><br>
+              <span class="bold">I'm calling the police </span><br>
               None of those are even Questions
-              <span class="bold">Sir my name is Constable Tom , we're going to be taking you into the station</span>
+              <span class="bold">Sir, we're going to be taking you into the station</span><br>
               Nuh uh 
-              <span class="bold">Did you just say fucking nuh uh?</span>
+              <span class="bold">Did you just say fucking nuh uh?</span><br>
               Suck my balls 
-              <span class="bold">Sir I'm taking you to court <br>Cal Martin Nicholas Dempster i sentence you to 12 years </span>
+              <span class="bold">Sir I'm afraid being in "goblin mode" is not an excuse to injure a terminally ill child</span>
+              <span class="bold">What inspires you</span><br>
+              A large part of our designs come from all sorts of places , some of our old drawings from out old comics and games , obsure mythology , talented artists and grafitti from spots dotted all around Northern Ireland
             </p>
           </section></section>
       </div>
