--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
         <h1>Shirts</h1>    
     </div>
       </nav>      
+      <section class="products">
+        
+      </section>
+
       <section class="products">            
         <!-- bandage eyes -->
           <div class="product-card">
