--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <link rel="icon" type="image/x-icon" href="images/favicon/favicon.ico">
 
     <!-- Meta tags -->
-    <meta name="description" content="Malicious Caligraphy is a company that makes shirts and cannot write descriptions online , big booty bitches">
+    <meta name="description" content="Malicious Caligraphy (Malicious Calligraphy) is a small desginer fahion company that makes graffiti style , art inspired streatwear.Based in a small village in northern Ireland we do everything we can to make only the finist fashion in the north west. ">
     <meta name="keywords" content="malicious caligraphy , fashion , Northern Irish Fashion , 
     Trendy t-shirts, Designer apparel, Northern Ireland fashion, Unique graphic tees, Fashion-forward clothing, Local designer wear, Cool streetwear, Belfast style, Irish fashion, Contemporary prints, Urban chic tees, Northern Ireland trends, Fashionable street style, Limited edition t-shirts, Modern Irish fashion, Stylish casual wear, Belfast designer tees, Graphic print fashion, Youthful clothing, Fashion inspired by Northern Ireland , malicious caligraphy">
     <meta name="author" content="Mal & Cal">
