--- a/pagesForProducts/DILF.html
+++ b/pagesForProducts/DILF.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Toxx tee</title>
+    <title>DILF tee</title>
 
     <!-- Javascript -->
     <script src="overlay.js"></script>
