--- a/collections.html
+++ b/collections.html
@@ -69,10 +69,8 @@
             <h6>£35.00</h6>
             <div class = "buyButton">
               <a href = "pagesForProducts/ToxxHoodie.html">View</a></div> 
-            </
             </div>
-          </div>  
-          <!-- Heleo Hoodie -->   
+           <!-- Heleo Hoodie -->   
           <div class="product-card">
             <div class="product-image">
             <img src="images/hoodieMockUps/heleoHoodieMockUp.png" alt="Heleo Hoodie">
@@ -80,9 +78,8 @@
             <h5>Heleo Hoodie</h5>
             <h6>£24.00</h6>
             <div class = "buyButton">
-              <a href = "pagesForProducts/HeleoHoodie.html">View</a></div> 
-            </div>        
-          </div>
+              <a href = "pagesForProducts/HeleoHoodie.html">View</a></div>         
+            </div>
           <!-- Heleo -->
           <div class="product-card">
              <div class="product-image">
@@ -92,7 +89,6 @@
              <h6>£14.05</h6>
              <div class = "buyButton">
               <a href = "pagesForProducts/Heleo.html">View</a></div> 
-            </div>  
           </div>
           </section>
           <section class="products">
@@ -105,8 +101,7 @@
             <h6>£14.00</h6>
             <div class = "buyButton">
               <a href = "pagesForProducts/Grynn.html">View</a></div> 
-            </div>              
-          </div>     
+            </div>                  
           <!-- Toxx -->
           <div class="product-card">
                   <div class="product-image">
@@ -117,17 +112,42 @@
                   <h6>£14.00</h6>
                   <div class = "buyButton">
                     <a href = "pagesForProducts/Toxx.html">View</a></div> 
-                  </div>  
-          </div> 
+          </div>  
+          
 
           </section>
+            </div>
+          </div>
+          </div>  
 
 
         </div>
       
         <div id="opticsCollection" class="collection-content" style="display:none;">
           <h2>The Optical Collection</h2>
-          <p>Eye see you looking fresh</p>      
+          <p>Eye see you looking </p>      
+          <section class="products">
+            <!-- Paved Optics -->
+              <div class="product-card">
+                <div class="product-image">
+                <img src="images/tshirtMockups/Eyes Collection/pavedOpticsTeeMockUp.jpg" alt="Paved Optics T shirt">
+              </div>
+                <h5>Paved Optics</h5>
+                <h6>£15.00</h6>
+                <div class = "buyButton">
+                <a href = "pagesForProducts/PavedEyes.html">View</a></div>
+              </div>   
+            <!-- Blackbird Optics -->
+            <div class="product-card">
+              <div class="product-image">
+              <img src="images/tshirtMockups/Eyes Collection/BlackbirdOpticsTee.jpg" alt="Blackbird Optics T shirt Malicious Caligraphy">
+            </div>
+              <h5>Blackbird Optics</h5>
+              <h6>£15.00</h6>
+              <div class = "buyButton">
+              <a href = "pagesForProducts/BlackbirdOptics.html">View</a></div>
+            </div>  
+          </section>
           <section class="products">            
        <!-- bandage eyes -->
         <div class="product-card">
@@ -142,7 +162,7 @@
         <!-- Cloudy eyes -->
         <div class="product-card">
           <div class="product-image">
-          <img src="images/tshirtMockups/Eyes Collection/mistyEyesMockUp.jpg" alt="Misty Eyes T shirt">
+          <img src="images/tshirtMockups/Eyes Collection/mistyEyesMockUp.jpg" alt="Cloudy Optics T shirt">
         </div>
           <h5>Cloudy Optics</h5>
           <h6>£14.00</h6>
