--- a/allProducts.html
+++ b/allProducts.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+o<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -197,7 +197,7 @@
                   <img src="images/tshirtMockups/Mals Collection/HeleoHoodieMockup.jpg" alt="Heleo Hoodie">
                 </div>
                   <h5>Heleo Hoodie</h5>
-                  <h6>£24.00</h6>
+                  <h6>£35.00</h6>
                   <div class = "buyButton">
                     <a href = "pagesForProducts/HeleoHoodie.html">View</a></div>                   
                 </div>
