Minor updates beginning of gym

--- a/index.html
+++ b/index.html
@@ -53,6 +53,11 @@
       <a href="aboutUs.html">About</a>
       <a href="allProducts.html">All Products</a>
     </nav>
+    <div class="shelfContainer">
+      <nav class="product-filter">
+          <h1>News</h1>    
+      </div>
+      Malicious Caligraphy is starting a Gym Brand
 <div class="shelfContainer">
     <nav class="product-filter">
         <h1>Shirts</h1>    
