--- a/aboutUs.html
+++ b/aboutUs.html
@@ -69,7 +69,7 @@
               <span class="bold">Why the name malicious caligraphy?</span><br>
               Malicious for our creator , Mal and Caligraphy for my name , Cal<br>
               <span class="bold">Why create a fashion brand</span><br>
-              On the 15th of January I made a bet with my best friend to create a business and make £100. I've made comics , art , websites , video games and alot more useless shit in the past and I have no experience in fashion ,  I don't even dress myself fucking well , making a fashion brand in all senses was a bad idea. But I have a philosphy in life : "throw shit againist the wall and see what sticks<br>
+              On the 15th of January I made a bet with my best friend to create a business and make £100. I've made comics , art , websites , video games and alot more useless shit in the past and I have no experience in fashion ,  I don't even dress myself fucking well , making a fashion brand in all senses was a bad idea. But I have a philosphy in life : no one asked , ur da sells avon , suck ur ma bitch boy<br>
               <span class="bold">Can you please stop punching my 4 year old , he's critically ill?</span><br>
               No<br>
               <span class="bold">Please I'm begging you stop</span><br>
